Read the project name format (project and branch) from the configuration setting

--- a/CIBridge.Web/Web.config
+++ b/CIBridge.Web/Web.config
@@ -51,6 +51,8 @@
 		<add key="CCNetServerUsername" value=""/>
 		<add key="CCNetServerPassword" value=""/>
 	  
+		<add key="BuildProjectNameFormat" value="{0} {1}"/>
+		
 		<add key="ClientValidationEnabled" value="true"/> 
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
 	</appSettings>
