TeamCity build engine support

--- a/CIBridge.Web/Web.config
+++ b/CIBridge.Web/Web.config
@@ -57,6 +57,12 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
 	</appSettings>
 
+	<ProjectMapping>
+		<projects>
+			<project projectname="" BuildName=""/>
+		</projects>
+	</ProjectMapping>
+
 	<system.net>
 		<settings>
 			<httpWebRequest useUnsafeHeaderParsing="true" />
