--- a/Cargowire.CIBridge/Cargowire.CIBridge.csproj
+++ b/Cargowire.CIBridge/Cargowire.CIBridge.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EasyHttp">
+      <HintPath>..\packages\EasyHttp.1.4.7.0\lib\net40\EasyHttp.dll</HintPath>
+    </Reference>
+    <Reference Include="JsonFx">
+      <HintPath>..\packages\JsonFx.2.0.1106.2610\lib\net40\JsonFx.dll</HintPath>
+    </Reference>
     <Reference Include="NetReflector, Version=1.1.2009.1214, Culture=neutral, PublicKeyToken=2f4dd8b32acbcd8e, processorArchitecture=MSIL">
       <HintPath>lib\NetReflector.dll</HintPath>
     </Reference>
@@ -38,6 +44,7 @@
       <HintPath>..\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +52,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TeamCitySharp">
+      <HintPath>..\packages\TeamCitySharp.0.3.2\lib\net40\TeamCitySharp.dll</HintPath>
+    </Reference>
     <Reference Include="ThoughtWorks.CruiseControl.Remote, Version=1.6.7981.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>lib\ThoughtWorks.CruiseControl.Remote.dll</HintPath>
     </Reference>
@@ -52,8 +62,15 @@
   <ItemGroup>
     <Compile Include="BuildEngines\CCNet.cs" />
     <Compile Include="BuildEngines\CCNetBase.cs" />
+    <Compile Include="BuildEngines\TeamCity.cs" />
     <Compile Include="BuildEngines\IBuildEngine.cs" />
     <Compile Include="Branch.cs" />
+    <Compile Include="Configuration\ConfigurationElementCollection.cs" />
+    <Compile Include="Configuration\ConfigurationSettings.cs" />
+    <Compile Include="Configuration\ConfigurationSettingsException.cs" />
+    <Compile Include="Configuration\ProjectMapCollection.cs" />
+    <Compile Include="Configuration\ProjectMapElement.cs" />
+    <Compile Include="Configuration\ProjectMapSection.cs" />
     <Compile Include="HookParsers\CodebaseHqHookParser.cs" />
     <Compile Include="Commit.cs" />
     <Compile Include="HookParsers\GitHubHookParser.cs" />
