--- a/Cargowire.CIBridge/packages.config
+++ b/Cargowire.CIBridge/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EasyHttp" version="1.4.7.0" />
+  <package id="JsonFx" version="2.0.1106.2610" />
   <package id="Newtonsoft.Json" version="4.0.2" />
+  <package id="TeamCitySharp" version="0.3.2" />
 </packages>
