--- a/CIBridge.Web/Web.config
+++ b/CIBridge.Web/Web.config
@@ -5,6 +5,9 @@
   -->
 
 <configuration>
+	<configSections>
+		<section name="ProjectMapping" type="Cargowire.CIBrdige.Configuration, Cargowire.CIBridge"/>
+	</configSections>
   <connectionStrings>
     <add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
