Full type name in section definition

--- a/CIBridge.Web/Web.config
+++ b/CIBridge.Web/Web.config
@@ -6,7 +6,7 @@
 
 <configuration>
 	<configSections>
-		<section name="ProjectMapping" type="Cargowire.CIBridge.Configuration, Cargowire.CIBridge"/>
+		<section name="ProjectMapping" type="Cargowire.CIBridge.Configuration.ProjectMapSection, Cargowire.CIBridge"/>
 	</configSections>
   <connectionStrings>
     <add name="ApplicationServices"
